<resources>
    <string name="app_name">Gneiss App</string>
    <string name="gneissapp">Global Network Encryption \n Investment Security Service</string>
    <string name="my_text"><u>Show All Balances</u></string>
    <string name="identityauthentication">Please got to GNEISS PC website (www.gneiss.io) for Verification Documents and further details.</string>
    <string name="dailywithdrawal_tierone">Daily Withdrawal Limit: \n2.0000 BTC</string>
    <string name="dailywithdrawal_tiertwo">Daily Withdrawal Limit: \n100.0000 BTC</string>
    <string name="dailywithdrawal_tierthree">Higher Limit</string>
    <string name="earnmore">Earn more BTC by simply referring this app toyour friends, Use the referral code and 0.005 BTC oncle they complete a trade. Receive up to 40% commission in real-time.</string>
    <string name="moredetails">For more details and further enquiry please visit\n <font color='#0272B8'>https://www.gneiss.io/referrals</font> on a PC</string>

    <string-array name="country">
        <item>USA</item>
        <item>India</item>
        <item>Australia</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="teams">TEAMS</string>
    <string name="register_players">+ Register Players</string>
    <string name="search_menu_title">Search</string>
    <string name="first_name">First Name*</string>
    <string name="middle_name">Middle Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="sports_league">Sports League</string>
    <string name="team_position">Team Position</string>
    <string name="sports_team">Sports Team</string>
    <string name="player_registration">Player Registration</string>
    <string name="roster_size">Roster Size</string>
    <string name="total_starters">Total Starters</string>
    <string name="total_on_bench">Total on Bench</string>
    <string name="roster">Roster</string>
    <string name="scoring">Scoring</string>
    <string name="skaters">Skaters</string>
    <string name="goaltender">Goaltender</string>
    <string name="goals_g">Goals (G)</string>
    <string name="assists_a">Assists (A)</string>
    <string name="wins_w">Wins(W)</string>
    <string name="goals_against_ga">Goals Against(GA)</string>
    <string name="shutouts_so">Shutouts (SO)</string>
    <string name="power_play_points_ppp">Power Play Points(PPP)</string>
    <string name="short_handed_goals_shg">Short Handed Goals(SHG)</string>


    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="league">
        <item>League 1</item>
        <item>League 2</item>
        <item>League 3</item>
    </string-array>

    <string-array name="team">
        <item>Team 1</item>
        <item>Team 2</item>
        <item>Team 3</item>
    </string-array>

    <string-array name="position">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
