<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ic_gredient"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/left_arrow"
            android:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/player_registration"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_drawable_blue_border"
                android:hint="Enter First Name"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/middle_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_drawable_blue_border"
                android:hint="Enter Middle Name"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/last_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_drawable_blue_border"
                android:hint="Enter Last Name"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/birthday"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_drawable_blue_border"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:hint="MM/DD/YYYY"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sex"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <Spinner
                android:id="@+id/sp_sex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_drop_down_normal"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sports_league"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <Spinner
                android:id="@+id/sp_league"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_drop_down_normal"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/team_position"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <Spinner
                android:id="@+id/sp_position"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_drop_down_normal"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sports_team"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <Spinner
                android:id="@+id/sp_teams"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_drop_down_normal"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp" />

            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/ic_drawable_pink"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
